update cv to upload it to Caltech

--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -82,8 +82,8 @@
     \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
     \textsc{Email, Phone:}  & \href{mailto:xwang@astro.ucla.edu}{xwang@astro.ucla.edu}  |  +1-805-574-0025  \\
     \textsc{Web:}  & \url{http://www.astro.ucla.edu/~xwang} \\
-    \textsc{Mailing Address:} & Department of Physics and Astronomy, UCLA, \\
-                              & Los Angeles, CA, USA 90095-1547
+    \textsc{Mailing Address:} & Department of Physics and Astronomy, UCLA \\
+                              & 475 Portola Plaza, Los Angeles, CA 90095-1547, USA
 \end{tabular}
 
 
@@ -94,7 +94,7 @@
   %--------------------------------------------------------
   \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
                             &   \begin{flushright}
-                                    \textbf{towards Ph.D. in Astronomy and Astrophysics}
+                                    \textbf{expecting Ph.D. in Astronomy and Astrophysics in June 2019}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Present}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
                             &   \texttt{Advisors: Profs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
@@ -102,14 +102,14 @@
   %--------------------------------------------------------
   \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\[\narrow]
                             &   \begin{flushright}
-                                    \textbf{M.A. in Physics}
+                                    \textbf{Master of Arts in Physics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2015}        &   Graduate Course Cumulative GPA: 3.96     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2010}--     &   School of Astronomy and Space Sciences, Nanjing University      \\[\narrow]
                             &   \begin{flushright}
-                                    \textbf{M.Sc. in Astrophysics}
+                                    \textbf{Master of Science in Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2013}        &   Field of Interest: Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
                             &   \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
@@ -117,7 +117,7 @@
   %--------------------------------------------------------
   \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\[\narrow]
                             &   \begin{flushright}
-                                    \textbf{B.Sc. in Astronomy}
+                                    \textbf{Bachelor of Science in Astronomy}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26
   %========================================================
