--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -1,4 +1,4 @@
-%: vim: formatoptions+=tw inde=
+%: vim: formatoptions+=tw
 % The evolving curriculum vitae of Xin Wang <albertfxwang@gmail.com>
 % based upon the cv of Aleksander Morgado <aleksander@gnu.org>
 % itself based on Alessandro Plasmati's cv template:
@@ -79,25 +79,33 @@
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
 %    \textsc{Nationality:}    & Chinese   \\
-    \textsc{Current Status:}  & Graduate Student at University of California, Los Angeles \\
-    \textsc{Email, Phone:}  & \href{mailto:xwang@astro.ucla.edu}{xwang@astro.ucla.edu}  |  +1-805-574-0025  \\
+    \textsc{Current Status:}  & Postdoctoral Scholar at Caltech/IPAC    \\
+    \textsc{Email, Phone:}  & \href{mailto:wangxin@ipac.caltech.edu}{wangxin@ipac.caltech.edu}  |  +1-805-574-0025  \\
     \textsc{Web:}  & \url{http://www.astro.ucla.edu/~xwang} \\
-    \textsc{Mailing Address:} & Department of Physics and Astronomy, UCLA \\
-                              & 475 Portola Plaza, Los Angeles, CA 90095-1547, USA
+    \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Caltech \\
+                              & 1200 East California Boulevard, Pasadena, CA 91125, USA
 \end{tabular}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Education}
+\section{Education and Employment}
 
 \begin{tabular}{r|p{5.25in}}
   %--------------------------------------------------------
+  \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech \\[\narrow]
+                            &   \begin{flushright}
+                                    \textbf{Postdoctoral Scholar}
+                                \end{flushright}    \\[\xnarrow]
+  \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
+                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert}    \\
+  \multicolumn{2}{c}{} \\[\narrow]
+  %--------------------------------------------------------
   \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
                             &   \begin{flushright}
-                                    \textbf{expecting Ph.D. in Astronomy and Astrophysics in June 2019}
+                                    \textbf{Ph.D. in Astronomy \& Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
-  \textsc{Present}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-                            &   \texttt{Advisors: Profs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
+  \textsc{Jun. 2019}          &   Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
+                            &   \texttt{Advisors: Drs. Tommaso Treu, Tucker Jones, Emanuele Daddi}     \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2013}--     &   Physics Department, University of California, Santa Barbara     \\[\narrow]
@@ -112,14 +120,14 @@
                                     \textbf{Master of Science in Astrophysics}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Jun. 2013}        &   Field of Interest: Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
-                            &   \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
+                            &   \texttt{Advisors: Drs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University \\[\narrow]
                             &   \begin{flushright}
                                     \textbf{Bachelor of Science in Astronomy}
                                 \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26
+  \textsc{Jun. 2010}        &   Weighted Average Score: 87.68/100; Ranking: 2$^{\rm nd}$/26
   %========================================================
 \end{tabular}
 
@@ -286,23 +294,26 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \section{Professional Service}
 
 \begin{tabular}{l}
-\textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
-\textbullet~External Reviewer for Chinese Telescope Access Program TAC
+    \textbullet~Referee for \textit{Astrophysical Journal}, \textit{Astrophysical Journal Supplement Series} \\
+    \textbullet~External Reviewer for Chinese Telescope Access Program TAC  \\
+    \textbullet~Participant in the inaugural \href{http://www.stsci.edu/contents/news/jwst/2019/master-class-participants-selected-for-november-2019-session}{JWST Master Class} \\
+    \textbullet~Organizer of Treu Group Meetings, UCSB \& UCLA  \\
+    \textbullet~Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, NJU
 \end{tabular}
 
-\begin{tabular}{r|p{5.3in}}
-\textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
-\multicolumn{2}{c}{} \\[\narrow]
-
-\textsc{Dec. 2010}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, Nanjing University \\
-\textsc{Dec. 2011}    & \small{In total, I arranged 17 meetings, and invited 34 speakers.
-        %most of which are graduate students. The majority of the speakers come from our school, while we do
-        %have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science
-        %and Technology of China, University of Sydney.
-        The topics are related to the major field of interest of the speakers, who will also share with
-        participants some academic experience in doing scientific research. This activity is financially
-        supported by our school.}  \\
-\end{tabular}
+%\begin{tabular}{r|p{5.3in}}
+%\textsc{2014--2015}  & Organizer of Treu Group Meetings, UCSB \& UCLA \\
+%\multicolumn{2}{c}{} \\[\narrow]
+%
+%\textsc{2010--2011}--  & Organizer of Graduate Journal Club in School of Astronomy and Space Sciences, Nanjing University \\
+%\textsc{Dec. 2011}    & \small{In total, I arranged 17 meetings, and invited 34 speakers.
+%        %most of which are graduate students. The majority of the speakers come from our school, while we do
+%        %have speakers from many other institutes, e.g., Purple Mountain Observatory, University of Science
+%        %and Technology of China, University of Sydney.
+%        The topics are related to the major field of interest of the speakers, who will also share with
+%        participants some academic experience in doing scientific research. This activity is financially
+%        supported by our school.}  \\
+%\end{tabular}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Teaching Experience}
@@ -334,7 +345,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} submitted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
 5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})    \\
@@ -349,7 +360,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %\end{list}   \\
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
-18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.} submitted, (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
+18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.} accepted, (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
