--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -82,7 +82,7 @@
     \textsc{Current Status:}  & Postdoctoral Scholar at Caltech/IPAC    \\
     \textsc{Email, Phone:}  & \href{mailto:wangxin@ipac.caltech.edu}{wangxin@ipac.caltech.edu}  |  +1-805-574-0025  \\
     \textsc{Web:}  & \url{http://www.astro.ucla.edu/~xwang} \\
-    \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Caltech \\
+    \textsc{Mailing Address:} & Infrared Processing and Analysis Center, Mail Code 314-6, Caltech \\
                               & 1200 East California Boulevard, Pasadena, CA 91125, USA
 \end{tabular}
 
@@ -97,7 +97,7 @@
                                     \textbf{Postdoctoral Scholar}
                                 \end{flushright}    \\[\xnarrow]
   \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
-                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert}    \\
+                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
   \multicolumn{2}{c}{} \\[\narrow]
   %--------------------------------------------------------
   \textsc{Sept. 2015}--     &   Dept. of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
@@ -281,7 +281,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 \section{Observing Experience}
 
 \begin{tabular}{l}
-\textbullet~Keck OSIRIS, 12 nights \\
+\textbullet~Keck OSIRIS, 14 nights \\
 \textbullet~Keck DEIMOS, 3 nights \\
 \textbullet~Keck MOSFIRE, 1 night \\
 \textbullet~Keck ESI, 1 night \\
@@ -345,7 +345,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
+8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
 5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967})    \\
@@ -360,8 +360,8 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %\end{list}   \\
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
-18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.} accepted, (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
-17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.} accepted (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
+18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
+17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
 15  &   Morishita, T., Abramson, L. E., Treu, T., \textbf{Wang, X.} et al.  Metal Deficiency in Two Massive Dead Galaxies at z$\sim$2. 2018, \textit{Astrophys. J. Letters}, 856L, 4 (\href{https://arxiv.org/abs/1803.01852}{arXiv:1803.01852})   \\
 14  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XII. Spatially Resolved Galaxy Star Formation Histories and True Evolutionary Paths at z$>$1. 2018, \textit{Astron. J.}, 156, 29 (\href{https://arxiv.org/abs/1710.00843}{arXiv:1710.00843})   \\
