--- a/xwang_cv.tex
+++ b/xwang_cv.tex
@@ -28,7 +28,7 @@
 %%% PARAGRAPH
 %\addtolength{\parskip}{\baselineskip}		space prob occurs when this is set free
 \setlength{\parindent}{0in}
-\setlength{\parskip}{0.6ex plus 0.4ex minus 0.2ex}
+\setlength{\parskip}{0.6ex plus 0.4ex minus 0.2ex}      % fontsize = 12
 
 %-------------- setup hyperref package, and colours for links
 \usepackage{hyperref}
@@ -40,7 +40,7 @@
 \titlespacing{\section}{0pt}{1ex}{0ex}
 %-------------- add euro symbol
 \usepackage[gen]{eurosym}
-%-------------- fine tune empty line height
+%-------------- fine tune empty line height, fontsize = 12
 \newcommand{\narrow}{-1.6ex}
 \newcommand{\xnarrow}{-2.8ex}
 %-------------- reduce row height in table env, see: https://tex.stackexchange.com/questions/176874/reducing-row-height-in-a-longtable
@@ -50,7 +50,7 @@
 %\end{longtable}
 %\endgroup
 %-------------- define the width for wrapping texts
-\newcommand{\textwrap}{5.3in}
+\newcommand{\textwrap}{5.3in}       % fontsize = 12
 
 %= = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = =
 % add page number without the header line
@@ -167,8 +167,7 @@
 %    \multicolumn{2}{c}{} \\[\narrow]
     \textsc{Aug. 2010} & 1$^{\rm st}$ Prize for Excellent B.Sc. Thesis amongst all Universities and Colleges in Jiangsu Province, China   \\
     \multicolumn{2}{c}{} \\[\narrow]
-    \textsc{Oct. 2009} & Scholarship of National Astrononmical Observatories, Chinese Academy of Sciences
-%\textsc{2007--2008} & Special Scholarship for Innovation, People's Scholarship, \textit{Der} Scholarship, etc.   \\
+    \textsc{Oct. 2009} & Scholarship of National Astronomical Observatories, Chinese Academy of Sciences
 \end{longtable}
 
 
@@ -223,8 +222,7 @@
     European Week of Astronomy and Space Science}, Prague, Czech Republic   \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jan. 2017}   &   \href{http://mingus.as.arizona.edu/~bjw/galaxy_group/2017spring.html}{\textbf{Colloquium talk}}, @ Steward 
-    Observatory, University of Arizona, Tucson, AZ \\
+    \textsc{Jan. 2017}   &   \href{http://mingus.as.arizona.edu/~bjw/galaxy_group/2017spring.html}{\textbf{Colloquium talk}}, @ Steward Observatory, University of Arizona, Tucson, AZ \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Aug. 2016}   &   \textbf{Colloquium talk}, @ Department of Astronomy, University of Michigan, Ann Arbor, MI \\
@@ -248,9 +246,7 @@
     \textsc{Nov. 2012}   &   \textbf{Contributed talk}, @ \href{http://www.phys.tsinghua.edu.cn/publish/phy/5287/2012/20121102084855753317440/20121102084855753317440_.html}{Tsinghua Transient Workshop 2012}, Tsinghua University, Beijing   \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ 
-    \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: 
-    Neutron Stars and their Environment''}, Hong Kong, China  \\
+    \textsc{Jun. 2010}   &   \textbf{Contributed talk}, @ \href{http://www.physics.hku.hk/~astro/2010Astro/Index.htm}{A mini-workshop on ``Gamma-ray Sky from Fermi: Neutron Stars and their Environment''}, Hong Kong, China  \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Apr. 2009}   &   \textbf{Contributed talk}, @ \href{http://www.ns-grb.com/index0.html}{Frontiers of Space Astrophysics: Neutron Stars \& Gamma Ray Bursts --- Recent Developments \& Future Directions}, Cairo \& Alexandria, Egypt     \\
@@ -345,6 +341,7 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
+9 &  \textbf{Wang, X.} et al. First Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2019, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) \\
 8 &  \textbf{Wang, X.} et al. Discovery of Strongly inverted metallicity gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800})  \\
 7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558}{arXiv:1610.07558})     \\
 6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405})  \\
@@ -358,8 +355,11 @@ Python, IDL, MATLAB, FORTRAN, C, \LaTeX, vim, Github, Mathematica
 %\begin{list}{\labelitemi}{\leftmargin=0.5em}
 %    \item[5]\hypertarget{5}{} \textbf{Wang, X.}, \& Huang, Y. F. On the Counter-jet Emission in GRB Afterglows. 2010b, \textit{AIP Conference Proceedings}, 1279, 460 (\href{http://arxiv.org/abs/1012.0521}{arXiv:1012.0521})
 %\end{list}   \\
+
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
+
+19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2019, \textit{MNRAS}, submitted (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
 18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
