--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -84,6 +84,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace*{-.5em}
 \section{Personal Information}
+\vspace*{1ex}
 \begin{tabular}{rl}
 %    \textsc{Date and Place of Birth:}       & September 1$^{\rm st}$, 1988  |  Tianjin, China \\
     \textsc{Current Status:}  & Postdoctoral Scholar at Caltech/IPAC    \\
@@ -95,35 +96,35 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Education and Employment}
-
+\vspace*{1ex}
 \begin{tabular}{r|p{5.7in}}
-  %--------------------------------------------------------
-  \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech    |   \textbf{Postdoctoral Scholar}   \\
-  \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
-%                            &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2015}--     & Department of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
-                            &   \begin{flushright}
-                                    \textbf{Ph.D. in Astronomy \& Astrophysics}
-                                \end{flushright}    \\[\xnarrow]
-  \textsc{Jun. 2019}        & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
-                            & \hspace*{7.4em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
-%                            & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics}   \\
-  \textsc{Jun. 2015}        & Graduate Course Cumulative GPA: 3.96     \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2010}--     & School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics}   \\
-  \textsc{Jun. 2013}        & Field of Interest: Precision Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
-%                            & \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
-  \multicolumn{2}{c}{} \\[\narrow]
-  %--------------------------------------------------------
-  \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy}    \\
-  \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26
-  %========================================================
+    %--------------------------------------------------------
+    \textsc{Aug. 2019}--      &   Infrared Processing and Analysis Center, Caltech    |   \textbf{Postdoctoral Scholar}   \\
+    \textsc{Present}          &   Expertise: Space-based Slitless Spectroscopy, HST WFC3/UVIS Imaging \\
+%                              &   \texttt{Advisors: Drs. Harry Teplitz, James Colbert, Marc Rafelski}    \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2015}--     & Department of Physics and Astronomy, University of California, Los Angeles \\[\narrow]
+                              &   \begin{flushright}
+                                      \textbf{Ph.D. in Astronomy \& Astrophysics}
+                                  \end{flushright}    \\[\xnarrow]
+    \textsc{Jun. 2019}        & Field of Interest: Spatially Resolved Spectroscopy, Chemical Evolution of Galaxies, \\
+                              & \hspace*{7.4em} Extragalactic Nebular Emission, Strong Gravitational Lensing. \\
+%                              & \texttt{Advisors: Profs. Tommaso Treu, Tucker A. Jones, Keren Sharon}     \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2013}--     & Physics Department, University of California, Santa Barbara    |   \textbf{M.A. in Physics}   \\
+    \textsc{Jun. 2015}        & Graduate Course Cumulative GPA: 3.96     \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2010}--     & School of Astronomy and Space Sciences, Nanjing University  |  \textbf{M.Sc. in Astrophysics}   \\
+    \textsc{Jun. 2013}        & Field of Interest: Precision Cosmology, Galaxy Clusters, Gamma-ray Bursts. \\
+%                              & \texttt{Advisors: Profs. Yong Feng Huang, Charling Tao, Gong-Bo Zhao}   \\
+    \multicolumn{2}{c}{} \\[\narrow]
+    %--------------------------------------------------------
+    \textsc{Sept. 2006}--     &   Department of Astronomy, Nanjing University  |  \textbf{B.Sc. in Astronomy}    \\
+    \textsc{Jun. 2010}        &   Weighted Average Score: 84.64/100 (overall), 87.68/100 (major); Ranking: 2$^{\rm nd}$/26
+    %========================================================
 \end{tabular}
 
 
@@ -275,14 +276,16 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace*{-.7em}
-\section{Approved Proposals (CoI)}
+\section{Approved Proposals}
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
-    \item[1] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
-    \item[2] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
-    \item[3] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
-    \item[4] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
-    \item[5] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
+    \vspace*{1ex}
+    \item[1] HST-16276, \textbf{PI Wang}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
+    \item[2] JWST-ERS-1324, PI Treu: Through the Looking GLASS: A JWST Exploration of Galaxy Formation and Evolution from Cosmic Dawn to Present Day
+    \item[3] HST-14922, PI Kelly: Probing the Nature of Dark Matter with Individual Stars Highly Magnified by a Galaxy Cluster
+    \item[4] HST-14280, PI Bradac: Breaking Cosmic Dawn: Observing the z>7 Universe Through Cosmic Telescopes
+    \item[5] VLT-0101.B-0418(A), PI Sanchez-Janssen: Chemodynamics of lensed dwarf galaxies at $1\lesssim z\lesssim 2$
+    \item[6] Keck, PI Jones: Dissecting Galaxy Formation and Testing Feedback Models on 100 pc Scales: An OSIRIS Survey of Lensed Galaxies at $z\simeq2$
 \end{list}
 
 
@@ -375,7 +378,7 @@
 %\end{list}   \\
 \\[\narrow]
 \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
-19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2019, \textit{MNRAS}, submitted (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
+19  &   Abramson, L. E., ..., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS). XIII. G800L optical spectra from the parallel fields. 2020, \textit{MNRAS}, 493, 952 (\href{https://arxiv.org/abs/1906.00008}{arXiv:1906.00008})   \\
 18  &   Hirtenstein, J., Jones, T., \textbf{Wang, X.} et al. The OSIRIS Lens-Amplified Survey (OLAS) I: Dynamical Effects of Stellar Feedback in Low Mass Galaxies at z$\sim$2. 2018, \textit{Astrophys. J.}, 880, 54 (\href{https://arxiv.org/abs/1811.11768}{arXiv:1811.11768}) \\
 17  &   Strait, V., ..., \textbf{Wang, X.} et al. Mass and Light of Abell 370: A Strong and Weak Lensing Analysis. 2018, \textit{Astrophys. J.}, 868, 129 (\href{https://arxiv.org/abs/1805.08789}{arXiv:1805.08789})  \\
 16  &   Quinn, E., ..., \textbf{Wang, X.} et al. Mass Modeling of Frontier Fields Cluster MACS J1149.5+2223 Using Strong and Weak Lensing. 2018, \textit{Astrophys. J.}, 859, 1 (\href{https://arxiv.org/abs/1806.00698}{arXiv:1806.00698}) \\
